# bfuse-filter-web

./: .gitignore  .gitmodules  README.md  _build.ts  deno.json  deploy.sh
js/: checker.tsx  generator.tsx  main.ts  main.tsx  util.ts  xor_filter.ts
rust/: Cargo.toml  lib.rs
web/: char.css  index.html  styles.css
