[package]
name = "xor_filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = { version = "0.3.77" }
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.217" }
wasm-bindgen = "0.2.100"
xorf = { version = "0.11.0", features = ["serde"] }

[profile.release]
panic = 'abort'
lto = true
opt-level = 's'
